--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,8 +1,5 @@
 plugins {
     id "com.android.application"
-     // START: FlutterFire Configuration
-    id 'com.google.gms.google-services'
-    // END: FlutterFire Configuration
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
@@ -41,11 +38,10 @@ android {
         applicationId = "com.example.ecommerce"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-       minSdkVersion 21
-       compileSdkVersion 33
-       targetSdkVersion flutter.targetSdkVersion
-       versionCode flutterVersionCode.toInteger()
-       versionName flutterVersionNamee
+        minSdk = flutter.minSdkVersion
+        targetSdk = flutter.targetSdkVersion
+        versionCode = flutterVersionCode.toInteger()
+        versionName = flutterVersionName
     }
 
     buildTypes {
